testsuite/tests/properties/invalid_nullconddotexpr/test.out
== foo.lkt ==
foo.lkt:13:39: error: null-conditional dotted name notation is illegal to designate an enum value
13 |     @export fun p(): MyEnum = MyEnum?.a
   |                                       ^


lkt_compile: Done
